# cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json
.changeset/: command-palette-wrap.md  conduit-to-the-universe.md  config.json  feature-parity.md  fix-scroll-autoscroll.md  friendly-termux-ux.md  github-tools.md  improved-tui-experience.md  kimi-support.md  memory-system.md  model-autocomplete.md  optional-clipboard.md  sandbox-exec.md  session-continuity.md  session-management.md  tools-and-providers.md
.github/workflows/: release.yml  test.yml
.omni/plans/: 2026-02-03-plan.md
crates/agent-core/: Cargo.toml
crates/agent-core/src/: conversation.rs  error.rs  lib.rs  permission.rs  plan.rs  provider.rs  types.rs
crates/agent-core/src/providers/: anthropic.rs  mod.rs  openai.rs  unified.rs
docs/plans/: feature-parity.md  launch-parity.md
src/: build_info.rs  lib.rs  main.rs
src/api/: mod.rs
src/cli/: auth.rs  init.rs  mod.rs
src/config/: mod.rs  persona.rs
src/core/: context.rs  error.rs  keychain.rs  mod.rs  secret.rs
src/core/agent/: conversation.rs  error.rs  mod.rs  permission.rs  plan.rs  provider.rs  tools.rs  types.rs
src/core/agent/providers/: anthropic.rs  mod.rs  openai.rs  unified.rs
src/core/lsp/: client.rs  mod.rs  protocol.rs  server.rs
src/core/mcp/: client.rs  config.rs  mod.rs  protocol.rs  server.rs
src/core/memory/: mod.rs
src/core/models/: mod.rs
src/core/plugin/: mod.rs
src/core/project/: mod.rs
src/core/search/: mod.rs
src/core/session/: compaction.rs  export.rs  message.rs  mod.rs  part.rs  share.rs  titling.rs
src/core/shell/: mod.rs  whitelist.rs
src/core/skill/: mod.rs  parse.rs
src/core/snapshot/: mod.rs
src/core/storage/: mod.rs
src/core/watcher/: mod.rs
src/core/worktree/: mod.rs
src/tui/: app.rs  message.rs  mod.rs  state.rs
src/tui/components/: command_palette.rs  diff.rs  edit_buffer.rs  editor_view.rs  file_picker.rs  highlighting.rs  input_action.rs  markdown.rs  messages.rs  mod.rs  model_selection.rs  prompt.rs  session.rs  session_list.rs  text_layout.rs  welcome.rs
tests/: permission_integration.rs
