[package]
name = "omnidotdev-cli"
version = "0.4.0"
edition = "2024"
rust-version = "1.86"
authors = ["Omni <team@omni.dev>"]
description = "Agentic CLI for the Omni ecosystem"
license = "MIT"
repository = "https://github.com/omnidotdev/cli"
homepage = "https://cli.omni.dev"
keywords = ["cli", "ai", "agent", "tui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "omni"
path = "src/main.rs"

[lib]
name = "omni_cli"
path = "src/lib.rs"

[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"
arboard = { version = "3", optional = true }
pulldown-cmark = "0.13"

# HTTP API
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
directories = "6"
dirs = "6"
toml = "0.9"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }

# LLM providers
llm = { version = "1.3", default-features = false, features = ["openai", "anthropic", "google", "groq", "mistral", "rustls-tls"] }

# Async streams
async-stream = "0.3"
pin-project-lite = "0.2"
tokio-stream = "0.1"

# File watching
notify = "8"
ignore = "0.4"

# Diff
similar = "2.7"

# Regex for HTML parsing
regex = "1"

# Permission system
uuid = { version = "1", features = ["v4"] }
rand = "0.9.2"
hex = "0.4"
chrono = { version = "0.4.43", features = ["serde"] }
parking_lot = "0.12.5"
ulid = "1"

# LSP integration
which = "7"
dialoguer = "0.12.0"

# Secure credential storage
# Note: keyring v3 requires explicit platform features for real credential storage
# Without these, it uses a no-op mock backend
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
missing_errors_doc = "allow"
significant_drop_tightening = "allow"
option_if_let_else = "allow"
cast_possible_wrap = "allow"
unnecessary_wraps = "allow"
items_after_statements = "allow"
needless_pass_by_value = "allow"
question_mark = "allow"
collection_is_never_read = "allow"
assigning_clones = "allow"
or_fun_call = "allow"
self_only_used_in_recursion = "allow"
too_many_lines = "allow"
match_same_arms = "allow"
