[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Reusable AI agent library for Omni"
rust-version = "1.86"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
directories = "6"
futures = "0.3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

# HTTP client (for provider implementations)
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }

# Async streams
async-stream = "0.3"
pin-project-lite = "0.2"
tokio-stream = "0.1"

# Unified LLM provider
llm = { version = "1.3", default-features = false, features = ["openai", "anthropic", "google", "groq", "mistral", "rustls-tls"] }

# Logging
tracing = "0.1"
